--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "~1.17.1",
     "cookie-parser": "~1.4.3",
     "crypto": "^1.0.1",
+    "crypto-js": "^3.1.9-1",
     "debug": "~2.6.3",
     "express": "~4.15.2",
     "jade": "~1.11.0",
