--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "jade": "~1.11.0",
     "morgan": "~1.8.1",
     "serve-favicon": "~2.4.2",
+    "template-compiler": "^1.2.1",
     "vue": "^2.5.2",
+    "vue-infinite-scroll": "^2.0.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
