--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "vue": "^2.5.2",
     "vue-infinite-scroll": "^2.0.2",
     "vue-router": "^3.0.1",
+    "vuejs-datepicker": "^1.3.0",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
